--- a/templates/admin/schedule.html
+++ b/templates/admin/schedule.html
@@ -9,7 +9,7 @@
     />
     <link
       rel="shortcut icon"
-      href="{{ url_for('static', filename='img/Logo.jpg') }}"
+      href="{{ url_for('static', filename='img/Logo-nobg.png') }}"
       type="image/x-icon"
     />
     <link
