--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
     />
     <link
       rel="shortcut icon"
-      href="{{ url_for('static', filename='img/Logo.jpg') }}"
+      href="{{ url_for('static', filename='img/Logo-nobg.png') }}"
       type="image/x-icon"
     />
 
@@ -33,7 +33,7 @@
               <a href="">
                 <div class="logo-nav">
                   <img
-                    src="{{ url_for('static', filename='img/Logo.jpg') }}"
+                    src="{{ url_for('static', filename='img/Logo-nobg.png') }}"
                     class="logo"
                     alt="Logo"
                   />
