--- a/templates/login.html
+++ b/templates/login.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/theme.css') }}" />
     <link
       rel="shortcut icon"
-      href="{{ url_for('static', filename='img/Logo.jpg') }}"
+      href="{{ url_for('static', filename='img/Logo-nobg.png') }}"
       type="image/x-icon"
     />
 
@@ -30,7 +30,7 @@
               <a href="">
                 <div class="logo-nav">
                   <img
-                    src="{{ url_for('static', filename='img/Logo.jpg') }}"
+                    src="{{ url_for('static', filename='img/Logo-nobg.png') }}"
                     class="logo"
                     alt="Logo"
                   />
