--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -122,16 +122,21 @@ p {
 }
 
 #header {
+  background-color: #ffde59;
+  padding: 10px 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   position: fixed;
-  left: 0;
-  width: 100%;
   top: 0;
-  z-index: 9;
-  background: var(--global-color-light-yellow);
+  width: 100%;
+  z-index: 10;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
+
 #header .header-con {
-  padding: 20px;
+  padding: 0;
 }
 
 #header ul li a {
@@ -147,23 +152,76 @@ p {
 }
 
 #header .logo-nav {
-  position: absolute;
-  left: 49.5%;
+  display: flex;
+  align-items: center;
 }
 
 #header .logo-nav img {
-  width: 100px;
-  margin: 0 auto;
-  height: 100px;
+  width: 30px;
+  height: 30px;
+  margin-right: 10px;
+}
+
+#header .logo-nav span {
+  font-size: 1.2em;
+  font-weight: bold;
+}
+
+#header .logo-nav p {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  font-size: 18px;
+  color: var(--global-color-black);
+  margin: 0; /* Ensure no extra margin */
+}
+
+#header .navbar li a:hover {
+  color: #007bff;
 }
 
 #header .navbar {
-  justify-content: center;
   display: flex;
-  position: relative;
-  gap: 50px;
-  margin: 0;
+  justify-content: space-between;
+  align-items: center;
+  list-style: none;
   padding: 0;
+  width: 100%;
+  max-width: 1200px; /* Adjust max-width as needed */
+}
+
+#header .navbar ul {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin: 0;
+  padding: 10px 0; /* Maintain the previous padding */
+  list-style: none;
+}
+
+#header .navbar li {
+  margin: 0;
+}
+
+#header .navbar li a {
+  text-decoration: none;
+  color: #333;
+  font-size: 0.8em; /* Make font smaller */
+  font-weight: bold;
+}
+/*
+
+#header .navbar li a {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  font-size: 18px;
+  transition: 0.2s;
+  color: var(--global-color-black);
+  padding: 10px 20px;
+}
+  */
+
+#header .navbar li a:hover {
+  color: var(--global-color-red);
 }
 
 #header .navbar li:nth-child(3) {
