--- a/templates/patient/header.html
+++ b/templates/patient/header.html
@@ -18,7 +18,7 @@
             <a href="">
               <div class="logo-nav">
                 <img
-                  src="{{ url_for('static', filename='img/Logo.jpg') }}"
+                  src="{{ url_for('static', filename='img/Logo-nobg.png') }}"
                   class="logo"
                   alt="Logo"
                 />
