--- a/templates/admin/inventory.html
+++ b/templates/admin/inventory.html
@@ -342,10 +342,10 @@
           <div class="medicines-container">
             <div class="medicine">
               <img
-                src="{{ url_for('static', filename='img/buscopan-img.png') }}"
+                src="{{ url_for('static', filename='img/Arranon.jpeg') }}"
                 alt="Medicine"
               />
-              <h2>Buscopan</h2>
+              <h2>Arranon</h2>
               <p>Stock: <span id="stock">10</span></p>
               <button class="edit-btn">EDIT</button>
               <button class="minus-btn" onclick="decrementStock('stock')">-</button>
@@ -354,10 +354,10 @@
             </div>
             <div class="medicine">
               <img
-                src="{{ url_for('static', filename='img/buscopan-img.png') }}"
+                src="{{ url_for('static', filename='img/ALL -Asparaginase.jpg') }}"
                 alt="Medicine"
               />
-              <h2>Buscopan</h2>
+              <h2>Asparaginase</h2>
               <p>Stock: 10</p>
               <button class="edit-btn">EDIT</button>
               <button class="minus-btn" onclick="decrementStock('stock')">-</button>
@@ -366,10 +366,10 @@
             </div>
             <div class="medicine">
               <img
-                src="{{ url_for('static', filename='img/buscopan-img.png') }}"
+                src="{{ url_for('static', filename='img/Cyclo.png') }}"
                 alt="Medicine"
               />
-              <h2>Buscopan</h2>
+              <h2>Cyclophosphamide</h2>
               <p>Stock: 10</p>
               <button class="edit-btn">EDIT</button>
               <button class="minus-btn" onclick="decrementStock('stock')">-</button>
@@ -378,10 +378,10 @@
             </div>
             <div class="medicine">
               <img
-                src="{{ url_for('static', filename='img/buscopan-img.png') }}"
+                src="{{ url_for('static', filename='img/ALL - Cytarabine.jpg') }}"
                 alt="Medicine"
               />
-              <h2>Buscopan</h2>
+              <h2>Cytarabine</h2>
               <p>Stock: 10</p>
               <button class="edit-btn">EDIT</button>
               <button class="minus-btn" onclick="decrementStock('stock')">-</button>
@@ -390,10 +390,10 @@
             </div>
             <div class="medicine">
               <img
-                src="{{ url_for('static', filename='img/buscopan-img.png') }}"
+                src="{{ url_for('static', filename='img/ALL - Daunomycin.jpg') }}"
                 alt="Medicine"
               />
-              <h2>Buscopan</h2>
+              <h2>Daunomycin</h2>
               <p>Stock: 10</p>
               <button class="edit-btn">EDIT</button>
               <button class="minus-btn" onclick="decrementStock('stock')">-</button>
@@ -402,16 +402,64 @@
             </div>
             <div class="medicine">
               <img
-                src="{{ url_for('static', filename='img/buscopan-img.png') }}"
+                src="{{ url_for('static', filename='img/ALL - Dexamethasone.png') }}"
                 alt="Medicine"
               />
-              <h2>Buscopan</h2>
+              <h2>Dexamethasone</h2>
               <p>Stock: 10</p>
               <button class="edit-btn">EDIT</button>
               <button class="minus-btn" onclick="decrementStock('stock')">-</button>
               <button class="plus-btn" onclick="incrementStock('stock')">+</button>
               <button class="save-btn">SAVE</button>
             </div>
+            <div class="medicine">
+              <img
+                src="{{ url_for('static', filename='img/ALL - Mercaptopurine.png') }}"
+                alt="Medicine"
+              />
+              <h2>Mercaptopurine</h2>
+              <p>Stock: 10</p>
+              <button class="edit-btn">EDIT</button>
+              <button class="minus-btn" onclick="decrementStock('stock')">-</button>
+              <button class="plus-btn" onclick="incrementStock('stock')">+</button>
+              <button class="save-btn">SAVE</button>
+            </div>
+            <div class="medicine">
+              <img
+                src="{{ url_for('static', filename='img/ALL - Methotrexate.jpg') }}"
+                alt="Medicine"
+              />
+              <h2>Methotrexate</h2>
+              <p>Stock: 10</p>
+              <button class="edit-btn">EDIT</button>
+              <button class="minus-btn" onclick="decrementStock('stock')">-</button>
+              <button class="plus-btn" onclick="incrementStock('stock')">+</button>
+              <button class="save-btn">SAVE</button>
+            </div>
+            <div class="medicine">
+              <img
+                src="{{ url_for('static', filename='img/ALL - Prednisone.png') }}"
+                alt="Medicine"
+              />
+              <h2>Prednisone</h2>
+              <p>Stock: 10</p>
+              <button class="edit-btn">EDIT</button>
+              <button class="minus-btn" onclick="decrementStock('stock')">-</button>
+              <button class="plus-btn" onclick="incrementStock('stock')">+</button>
+              <button class="save-btn">SAVE</button>
+            </div>
+          <div class="medicine">
+            <img
+              src="{{ url_for('static', filename='img/ALL - Vincristine.jpg') }}"
+              alt="Medicine"
+            />
+            <h2>Vincristine</h2>
+            <p>Stock: 10</p>
+            <button class="edit-btn">EDIT</button>
+            <button class="minus-btn" onclick="decrementStock('stock')">-</button>
+            <button class="plus-btn" onclick="incrementStock('stock')">+</button>
+            <button class="save-btn">SAVE</button>
+          </div>
           </div>
         </div>
       </div>
