--- a/templates/patient/header.html
+++ b/templates/patient/header.html
@@ -30,7 +30,7 @@
             <a href="#contact">Contact Us</a>
           </li>
           <li>
-            <a href="#">Wellness Plan</a>
+            <a href="{{ url_for('.patient_reservation') }}">Wellness Plan</a>
           </li>
           <li>
             <a href="{{ url_for('.patient_schedule') }}">Schedule</a>
