--- a/templates/patient/wellnessplan.html
+++ b/templates/patient/wellnessplan.html
@@ -13,3 +13,22 @@
       type="image/x-icon"
     />
     <title>Wellness Plan</title>
+    </head>
+    <body>
+      <div class ="flex-container">
+        <div class="flex-box">
+          Box 1
+        </div>
+
+        <div class ="flex-container">
+          <div class="flex-box">
+            Box 1
+          </div>
+
+          <div class ="flex-container">
+            <div class="flex-box">
+              Box 1
+            </div>
+            
+      </div>
+    </body>
