--- a/templates/patient/wellnessplan.html
+++ b/templates/patient/wellnessplan.html
@@ -13,6 +13,16 @@
       type="image/x-icon"
     />
     <title>Wellness Plan</title>
+    <style type="text/css>
+      *{
+        margin: 0;
+        padding: 0;
+        font family:
+      
+        
+      }
+    </style>
+    "
     </head>
     <body>
       <div class ="flex-container">
