--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -596,3 +596,31 @@ section#section-modal form .btn-primary {
 #schedule .table-responsive.hide-table {
   display: none;
 }
+
+.first{
+  height: 100px;
+  width: 100px;
+  background-color: rgb(252, 194, 140);
+  margin-bottom: 100px;
+}
+
+.second{
+  height: 100px;
+  width: 100px;
+  background-color: rgb(252, 194, 140);
+  margin-bottom: 100px;
+}
+
+.third{
+  height: 100px;
+  width: 100px;
+  background-color: rgb(252, 194, 140);
+  margin-bottom: 100px;
+}
+
+.fourth{
+  height: 100px;
+  width: 100px;
+  background-color: rgb(252, 194, 140);
+  margin-bottom: 100px;
+}
