--- a/templates/patient/wellnessplan.html
+++ b/templates/patient/wellnessplan.html
@@ -1,44 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="{{ url_for('static', filename='css/theme.css') }}"
-    />
-    <link
-      rel="shortcut icon"
-      href="{{ url_for('static', filename='img/Logo-nobg.png') }}"
-      type="image/x-icon"
-    />
-    <title>Wellness Plan</title>
-    <style type="text/css>
-      *{
-        margin: 0;
-        padding: 0;
-        font family:
-      
-        
-      }
-    </style>
-    "
+  <!DOCTYPE html>
+  <html lang="en">
+    <head>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <link
+        rel="stylesheet"
+        href="/static/css/theme.css"
+      />
+      <link
+        rel="shortcut icon"
+        href="/static/img/Logo-nobg.png"
+        type="image/x-icon"
+      />
+      <title>Wellness Plan</title>
     </head>
     <body>
-      <div class ="flex-container">
-        <div class="flex-box">
-          Box 1
-        </div>
-
-        <div class ="flex-container">
-          <div class="flex-box">
-            Box 1
-          </div>
-
-          <div class ="flex-container">
-            <div class="flex-box">
-              Box 1
-            </div>
-            
-      </div>
+      <div class="first">WELLNESS PLAN</div>
+      <div class="second">FOOD RESTRICTION</div>
+      <div class="third">REMINDER</div>
+      <div class="fourth">PATIENTS FEEDBACK</div>
     </body>
+    </html>
