--- a/templates/patient/schedule.html
+++ b/templates/patient/schedule.html
@@ -208,7 +208,7 @@
               <input type="text" name="municipality" required value="{{ session_user.municipality }}" />
             </div>
             <div class="btn-con">
-              <button class="btn-primary" name="submit">SUBMIT</button>
+              <button class="btn-primary" name="submit" link>SUBMIT</button>
             </div>
           </form>
         </div>
