--- a/templates/patient/wellnessplan.html
+++ b/templates/patient/wellnessplan.html
@@ -63,9 +63,9 @@
         justify-content: center;
       }
       .logo-nav img {
-        margin-right: 10px;
-        .first{
-  font-family: 
+        margin-right: 10px;}
+        
+.first{
   height: 100px;
   width: 100px;
   background-color: 0%,0%, #ffde59,#ffa100;
@@ -92,8 +92,7 @@
   background-color: 0%,0%, #ffde59,#ffa100;
   margin-bottom: 100px;
 }
-
-      }
+      
         </style>
       <body>
         <section id="header">
