--- a/templates/admin/schedule.html
+++ b/templates/admin/schedule.html
@@ -208,11 +208,17 @@
                                 <td>{{ i.cancer_type }}</td>
                                 <td>{{ i.reservation_date }}</td>
                                 <td>
-                                    <form action="/admin/completed/delete/{{ i.id }}" method="post">
+                                    <form action="/admin/completed/delete/{{ i.id }}" method="post" onsubmit="return confirmDelete()">
                                         <button type="submit" name="delete" class="btn btn-danger" title="delete">
                                             <i class="bi bi-trash3"></i>
                                         </button>
                                     </form>
+                                    
+                                    <script>
+                                    function confirmDelete() {
+                                        return confirm('Are you sure you want to delete this item?');
+                                    }
+                                    </script>
                                 </td>
                             </tr>
                             {% endfor %}
