Fixed the complete table, added confirmation to delete in complete table

--- a/templates/patient/schedule.html
+++ b/templates/patient/schedule.html
@@ -167,6 +167,7 @@
                   Maguindanao del Norte
                 </option>
                 <option value="Maguindanao del Sur">Maguindanao del Sur</option>
+                <option value="Metro Manila"> Metro Manila</option>
                 <option value="Marinduque">Marinduque</option>
                 <option value="Masbate">Masbate</option>
                 <option value="Misamis Occidental">Misamis Occidental</option>
