--- a/templates/index.html
+++ b/templates/index.html
@@ -65,8 +65,7 @@
               <label for="type">ACCOUNT TYPE</label>
               <select name="acc_type">
                 <option value="" selected hidden disabled></option>
-                <option value="1">Admin</option>
-                <option value="0">Patient</option>
+                <option value="1">Patient</option>
               </select>
             </div>
             <div class="field-con">
@@ -128,7 +127,7 @@
                   Maguindanao del Norte
                 </option>
                 <option value="Maguindanao del Sur">Maguindanao del Sur</option>
-                <option value="Manila">Manila</option>
+                <option value="Metro Manila"> Metro Manila</option>
                 <option value="Marinduque">Marinduque</option>
                 <option value="Masbate">Masbate</option>
                 <option value="Misamis Occidental">Misamis Occidental</option>
