--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -42,7 +42,7 @@
               </a>
             </li>
             <li><a href="#contact">Contact Us</a></li>
-            <li><a href="#">Wellness Plan</a></li>
+            <li><a href= "{{ url_for('.patient_wellnessplan') }}">Wellness Plan</a></li>
             <li><a href="{{ url_for('.admin_schedule') }}">Schedule</a></li>
             <li><a href="{{ url_for('.inventory') }}">Inventory</a></li>
             <li><a href="{{ url_for('.index') }}">Logout</a></li>
