--- a/templates/admin/inventory.html
+++ b/templates/admin/inventory.html
@@ -279,7 +279,7 @@
               </div>
             </li>
             <li><a href="#account">Account</a></li>
-            <li><a href="#wellness_plan">Wellness Plan</a></li>
+            <li><a a href= "{{ url_for('.patient_wellnessplan') }}">Wellness Plan</a></li>
             <li>
               <a href="#">
                 <div class="logo-nav">
