--- a/templates/patient/header.html
+++ b/templates/patient/header.html
@@ -29,8 +29,9 @@
           <li>
             <a href="#contact">Contact Us</a>
           </li>
+  
           <li>
-            <a href="{{ url_for('.patient_reservation') }}">Wellness Plan</a>
+            <a href="{{ url_for('.patient_save') }}">Wellness Plan</a>
           </li>
           <li>
             <a href="{{ url_for('.patient_schedule') }}">Schedule</a>
