--- a/templates/patient/wellnessplan.html
+++ b/templates/patient/wellnessplan.html
@@ -64,7 +64,7 @@
   </script>
   <div class = "content">
    
-    <p>Hello, Jeon</p>
+    <p>Hello</p>
 
 <form method="POST" action="{{ url_for('.patient_weeks') }}">
   <div class="field-con">
